--- a/style.css
+++ b/style.css
@@ -1,6 +1,108 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,100;0,200;0,400;0,500;0,600;1,100;1,200;1,400;1,500&family=Montserrat:ital,wght@0,100;0,200;0,300;1,100;1,200&family=Mulish:ital,wght@0,200;0,300;0,400;1,200;1,300&display=swap');
 
-:root{
-    --cor-principal: #0088FF;
+* {
+    box-sizing: border-box;
+    padding: 0px;
+    margin: 0px;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400;500;600&family=Montserrat+Alternates:wght@300;400;500;600&family=Mooli&display=swap');
+
+:root {
+    --cor-principal: #0088FF;
+    --incosolata: 'Inconsolata', monospace;
+    --Montserrat: 'Montserrat Alternates', sans-serif;
+    --Mooli: 'Mooli', sans-serif;
+
+}
+
+header {
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    position: relative;
+}
+
+.img-wrapper {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.img-wrapper img {
+    width: inherit;
+    height: inherit;
+    object-fit: cover;
+    opacity: 0.7;
+    animation: zoom 20s infinite;
+}
+
+
+@keyframes zoom{
+    0%{
+        transform: scale(1);
+    }
+
+    100%{
+        transform: scale(1.5);
+    }
+}
+
+.banner {
+    position: absolute;
+    top: 30%;
+    left: 15%;
+    color: white;
+}
+
+.banner h1 {
+    font-size: 3.5rem;
+    font-weight: 400;
+    text-shadow: .3rem .4rem 3px rgba(0, 0, 0, 0.5);
+    line-height: 3.5rem;
+    margin-bottom: 2rem;
+    font-family: var(--Montserrat);
+    font-weight: 400;
+}
+
+.banner p {
+    font-size: 2rem;
+    text-shadow: .3rem .4rem rgba(0, 0, 0, 0.5);
+    margin-bottom: 2rem;
+    font-family: var(--Mooli);
+    font-weight: 400px;
+    
+}
+
+.banner button {
+    color: white;
+    padding: 0.5rem 2rem;
+    text-transform: uppercase;
+    border: 0px;
+    font-weight: 600;
+    border-radius: 5px;
+    background: linear-gradient(to right, var(--cor-principal), #00416A);
+    letter-spacing: .1rem;
+    cursor: pointer;
+    border: 0.5px solid transparent;
+    transition: all .9s linear;
+    font-family: var(--incosolata);
+}
+
+.banner button:hover {
+    background: linear-gradient(to left, var(--cor-principal), #00416A);
+    border: white;
+}
+
+/* 
+@keyframes moveBanner{
+    0%{
+        transform: translateY(12rem) rotate(-10deg);
+    }
+
+    100%{
+        transform: translateY(0rem) rotate(0deg);
+        opacity: 10000;
+    }
+} */
