--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
     box-sizing: border-box;
     padding: 0px;
     margin: 0px;
+    list-style: none;
+    text-decoration: none
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400;500;600&family=Montserrat+Alternates:wght@300;400;500;600&family=Mooli&display=swap');
@@ -13,8 +15,82 @@
     --incosolata: 'Inconsolata', monospace;
     --Montserrat: 'Montserrat Alternates', sans-serif;
     --Mooli: 'Mooli', sans-serif;
+}
+
+.hambuger{
+    width: 2rem;
+    height: 2rem;
+    position: fixed;
+    z-index: 999;
+    right: 2rem;
+    top: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    cursor: pointer;
+}
+
+.show-menu .hambuger{
+    right: 16rem;
+    transition: all 0.5s linear;
+}
+
+.line{
+    width: 100%;
+    height: .1rem;
+    background-color: white;
+    box-shadow: 2px 2px 0px  rgba(0, 0, 0, 0.8);
+    transition: all .3s linear;
+}
+
+.show-menu #line1{
+    transform: rotate(45deg) translate(.3rem, .45rem);
+    background-color: red;
+    box-shadow: 0px 0px 0px;
+}
+
+.show-menu #line2{
+    opacity: 0;
+    visibility: hidden;
+}
+
+.show-menu #line3{
+    transform: rotate(-45deg) translate(.3rem, -.45rem);
+    background-color: red;
+    box-shadow: 0px 0px 0px;
+}
+
+.hambuger span{
+    position: absolute;
+    left: 3rem;
+    width: 6rem;
+    height: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-family: var(--Montserrat);
+    border-radius: 5px;
+    background-color: var(--cor-principal);
+    opacity: 0;
+    transition: all 0.3s linear;
 
 }
+
+.hambuger span::before{
+    content: '';
+    position: absolute;
+    border-top: .5rem solid transparent;
+    border-right: .5rem solid var(--cor-principal);
+    border-bottom: .5rem solid transparent;
+    border-left: .5rem solid transparent;
+    left: -1rem;
+}
+
+.show-menu .hambuger:hover span{
+    opacity: 1;
+}
+
 
 header {
     width: 100%;
@@ -35,7 +111,7 @@ header {
     height: inherit;
     object-fit: cover;
     opacity: 0.7;
-    animation: zoom 20s infinite;
+    animation: zoom 25s infinite;
 }
 
 
@@ -45,7 +121,7 @@ header {
     }
 
     100%{
-        transform: scale(1.5);
+        transform: scale(1.6);
     }
 }
 
@@ -95,14 +171,69 @@ header {
     border: white;
 }
 
-/* 
-@keyframes moveBanner{
-    0%{
-        transform: translateY(12rem) rotate(-10deg);
-    }
+.sideBar{
+    width: 20rem;
+    height: 100vh;
+    background-color: white;
+    position: fixed;
+    top: 0;
+    right: -20rem;
+    transition: all 0.4s linear;
+}
 
-    100%{
-        transform: translateY(0rem) rotate(0deg);
-        opacity: 10000;
-    }
-} */
+.show-menu .sideBar{
+    right: 0;
+    transition: all 0.5s linear;
+}
+
+.sideBar .menu{
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.sideBar .menu-item{
+    text-align: center;
+    margin-bottom: 1rem;
+
+}
+
+.sideBar .menu-link{
+    font-family: var(--Montserrat);
+    font-size: 1.5rem;
+    color: #555;
+    transition: all .3s linear;
+}
+
+.sideBar .menu-link:hover{
+    color: var(--cor-principal);
+    letter-spacing: .6rem;
+}
+
+.social-media{
+    position: absolute;
+    bottom: 2rem;
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.social-media i{
+    width: 3rem;
+    height: 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    color: var(--cor-principal);
+    transition: all .3s linear;
+}
+
+.social-media i:hover{
+    color: var(--cor-principal);
+    transition: all .5s linear;
+    font-size: 2.5rem;
+}
