--- a/style.css
+++ b/style.css
@@ -237,3 +237,97 @@ header {
     transition: all .5s linear;
     font-size: 2.5rem;
 }
+
+.sessao-conhecimentos{
+    background-color: #FDFDFD;
+    height: auto;
+}
+
+.conhecimentos{
+    display: grid;
+    grid-template-columns: repeat(16, 1fr);
+    grid-template-rows: repeat(6, .8rem);
+    row-gap: 6rem;
+}
+
+.conhecimento:nth-child(1){
+    grid-column: 4/7;
+    grid-row: 1/3;
+}
+
+.conhecimento:nth-child(2){
+    grid-column: 3/6;
+    grid-row: 3/5;
+}
+
+.conhecimento:nth-child(3){
+    grid-column: 4/7;
+    grid-row: 5/-1;
+}
+
+.conhecimento:nth-child(4){
+    grid-column: 11/14;
+    grid-row: 1/3;
+}
+
+.conhecimento:nth-child(5){
+    grid-column: 12/15;
+    grid-row: 3/5;
+}
+
+.conhecimento:nth-child(6){
+    grid-column: 11/14;
+    grid-row: 5/-1;
+}
+
+.sessao-conhecimentos .sessao-header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem 0rem;
+}
+
+.sessao-conhecimentos .sessao-header h1{
+    font-family: var(--Mooli);
+    border-bottom: .2rem solid var(--cor-principal);
+    letter-spacing: .4rem;
+    font-size: 2rem;
+    color: #4b4b4b;
+}
+
+.conhecimento .conhecimento-header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #4b4b4b;
+}
+
+
+.conhecimento .conhecimento-header i{
+    font-size: 2.5rem;
+}
+
+.conhecimento .conhecimento-header h3{
+    font-family: var(--Mooli);
+    font-size: 1.5rem;
+    padding-left: .5rem;
+}
+
+.conhecimento .conhecimento-text{
+    font-family: var(--Mooli);
+    text-align: center;
+    margin-top: 1rem;
+}
+
+.conhecimentos .conhecimentos-img-wrapper{
+    grid-column: 7/11;
+    grid-row: 3/7;
+    width: 100%;
+}
+
+.conhecimentos .conhecimentos-img-wrapper img{
+    width: inherit;
+    height: inherit;
+    object-fit: cover;
+    border-radius: 3rem;
+}
