--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
     --Mooli: 'Mooli', sans-serif;
 }
 
-.hambuger{
+.hambuger {
     width: 2rem;
     height: 2rem;
     position: fixed;
@@ -30,37 +30,37 @@
     cursor: pointer;
 }
 
-.show-menu .hambuger{
+.show-menu .hambuger {
     right: 16rem;
     transition: all 0.5s linear;
 }
 
-.line{
+.line {
     width: 100%;
     height: .1rem;
     background-color: white;
-    box-shadow: 2px 2px 0px  rgba(0, 0, 0, 0.8);
+    box-shadow: 2px 2px 0px rgba(0, 0, 0, 0.8);
     transition: all .3s linear;
 }
 
-.show-menu #line1{
+.show-menu #line1 {
     transform: rotate(45deg) translate(.3rem, .45rem);
     background-color: red;
     box-shadow: 0px 0px 0px;
 }
 
-.show-menu #line2{
+.show-menu #line2 {
     opacity: 0;
     visibility: hidden;
 }
 
-.show-menu #line3{
+.show-menu #line3 {
     transform: rotate(-45deg) translate(.3rem, -.45rem);
     background-color: red;
     box-shadow: 0px 0px 0px;
 }
 
-.hambuger span{
+.hambuger span {
     position: absolute;
     left: 3rem;
     width: 6rem;
@@ -77,7 +77,7 @@
 
 }
 
-.hambuger span::before{
+.hambuger span::before {
     content: '';
     position: absolute;
     border-top: .5rem solid transparent;
@@ -87,7 +87,7 @@
     left: -1rem;
 }
 
-.show-menu .hambuger:hover span{
+.show-menu .hambuger:hover span {
     opacity: 1;
 }
 
@@ -115,12 +115,12 @@ header {
 }
 
 
-@keyframes zoom{
-    0%{
+@keyframes zoom {
+    0% {
         transform: scale(1);
     }
 
-    100%{
+    100% {
         transform: scale(1.6);
     }
 }
@@ -148,7 +148,7 @@ header {
     margin-bottom: 2rem;
     font-family: var(--Mooli);
     font-weight: 400px;
-    
+
 }
 
 .banner button {
@@ -171,7 +171,7 @@ header {
     border: white;
 }
 
-.sideBar{
+.sideBar {
     width: 20rem;
     height: 100vh;
     background-color: white;
@@ -181,37 +181,38 @@ header {
     transition: all 0.4s linear;
 }
 
-.show-menu .sideBar{
+.show-menu .sideBar {
     right: 0;
     transition: all 0.5s linear;
 }
 
-.sideBar .menu{
+.sideBar .menu {
     position: absolute;
     top: 40%;
     left: 50%;
+    z-index: 999;
     transform: translate(-50%, -50%);
 }
 
-.sideBar .menu-item{
+.sideBar .menu-item {
     text-align: center;
     margin-bottom: 1rem;
 
 }
 
-.sideBar .menu-link{
+.sideBar .menu-link {
     font-family: var(--Montserrat);
     font-size: 1.5rem;
     color: #555;
     transition: all .3s linear;
 }
 
-.sideBar .menu-link:hover{
+.sideBar .menu-link:hover {
     color: var(--cor-principal);
     letter-spacing: .6rem;
 }
 
-.social-media{
+.social-media {
     position: absolute;
     bottom: 2rem;
     width: 100%;
@@ -221,7 +222,7 @@ header {
     align-items: center;
 }
 
-.social-media i{
+.social-media i {
     width: 3rem;
     height: 3rem;
     display: flex;
@@ -232,62 +233,61 @@ header {
     transition: all .3s linear;
 }
 
-.social-media i:hover{
+.social-media i:hover {
     color: var(--cor-principal);
     transition: all .5s linear;
     font-size: 2.5rem;
 }
 
-.sessao-conhecimentos{
-    background-color: #FDFDFD;
-    height: auto;
+.sessao-conhecimentos {
+    background-color: #F5f5f5;
 }
 
-.conhecimentos{
+.conhecimentos {
     display: grid;
     grid-template-columns: repeat(16, 1fr);
     grid-template-rows: repeat(6, .8rem);
     row-gap: 6rem;
 }
 
-.conhecimento:nth-child(1){
+.conhecimento:nth-child(1) {
     grid-column: 4/7;
     grid-row: 1/3;
 }
 
-.conhecimento:nth-child(2){
+.conhecimento:nth-child(2) {
     grid-column: 3/6;
     grid-row: 3/5;
 }
 
-.conhecimento:nth-child(3){
+.conhecimento:nth-child(3) {
     grid-column: 4/7;
     grid-row: 5/-1;
 }
 
-.conhecimento:nth-child(4){
+.conhecimento:nth-child(4) {
     grid-column: 11/14;
     grid-row: 1/3;
 }
 
-.conhecimento:nth-child(5){
+.conhecimento:nth-child(5) {
     grid-column: 12/15;
     grid-row: 3/5;
 }
 
-.conhecimento:nth-child(6){
+.conhecimento:nth-child(6) {
     grid-column: 11/14;
     grid-row: 5/-1;
 }
 
-.sessao-conhecimentos .sessao-header{
+.sessao-header {
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 2rem 0rem;
 }
 
-.sessao-conhecimentos .sessao-header h1{
+.sessao-header h1 {
     font-family: var(--Mooli);
     border-bottom: .2rem solid var(--cor-principal);
     letter-spacing: .4rem;
@@ -295,7 +295,7 @@ header {
     color: #4b4b4b;
 }
 
-.conhecimento .conhecimento-header{
+.conhecimento .conhecimento-header {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -303,31 +303,131 @@ header {
 }
 
 
-.conhecimento .conhecimento-header i{
+.conhecimento .conhecimento-header i {
     font-size: 2.5rem;
 }
 
-.conhecimento .conhecimento-header h3{
+.conhecimento .conhecimento-header h3 {
     font-family: var(--Mooli);
     font-size: 1.5rem;
     padding-left: .5rem;
 }
 
-.conhecimento .conhecimento-text{
+.conhecimento .conhecimento-text {
     font-family: var(--Mooli);
     text-align: center;
     margin-top: 1rem;
 }
 
-.conhecimentos .conhecimentos-img-wrapper{
+.conhecimentos .conhecimentos-img-wrapper {
     grid-column: 7/11;
     grid-row: 3/7;
     width: 100%;
 }
 
-.conhecimentos .conhecimentos-img-wrapper img{
+.conhecimentos .conhecimentos-img-wrapper img {
     width: inherit;
     height: inherit;
     object-fit: cover;
     border-radius: 3rem;
+}
+
+.projetos {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.card {
+    width: 20rem;
+    height: 30rem;
+    position: relative;
+}
+
+.card-img-wrapper {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.card-img-wrapper img {
+    object-fit: cover;
+    width: inherit;
+    height: inherit;
+    border-radius: 10px;
+    opacity: .8;
+}
+
+.card:hover .card-img-wrapper img{
+    opacity: .3;
+}
+
+
+.card-info {
+    position: absolute;
+    bottom: 0;
+    padding: 2rem;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s linear;
+    text-shadow: 0.0.2rem 0.0.1rem .3rem rgba(0, 0, 0, 0.5);
+}
+
+.card-info h2 {
+    font-family: var(--incosolata);
+    font-size: 2rem;
+    font-weight: 500;
+    color: white;
+}
+
+.card-info h3 {
+    color: white;
+    text-align: center;
+    letter-spacing: .2rem;
+    font-size: 1.5rem;
+    font-family: var(--Mooli);
+    font-weight: 400;
+}
+
+.card-info p {
+    font-family: var(--Montserrat);
+    color: white;
+    line-height: 1.1rem;
+}
+
+.card-info button {
+    width: 100%;
+    padding: 1rem 2rem;
+    border: 0px;
+    font-weight: 600;
+    border-radius: 5px;
+    background: linear-gradient(to right, var(--cor-principal), #00416A);
+    letter-spacing: .1rem;
+    cursor: pointer;
+    border: 0.5px solid transparent;
+    transition: all .9s linear;
+    font-family: var(--incosolata);
+    margin-top: 2rem;
+}
+
+.card-info button:hover {
+    background: linear-gradient(to left, var(--cor-principal), #00416A);
+    border: white;
+}
+
+.card-info button a {
+    color: white;
+    text-transform: uppercase;
+}
+
+.card:hover .card-info,
+.card:hover{
+    bottom: 2rem;
+    opacity: 1;
+    visibility: visible;
+/*     
+    background-color: rgba(0, 0, 0, 0.2); */
 }
