--- a/style.css
+++ b/style.css
@@ -151,7 +151,12 @@ header {
 
 }
 
-.banner button {
+.card-info .button{
+    width: 8rem;
+    height: 2.5rem;
+}
+
+.btn{
     color: white;
     padding: 0.5rem 2rem;
     text-transform: uppercase;
@@ -166,7 +171,7 @@ header {
     font-family: var(--incosolata);
 }
 
-.banner button:hover {
+.btn:hover {
     background: linear-gradient(to left, var(--cor-principal), #00416A);
     border: white;
 }
@@ -443,4 +448,96 @@ header {
     opacity: 1;
     visibility: visible;
 
+}
+
+.sessao-contato{
+    width: 100%;
+    height: 100vh;
+    background-color: #272727;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.contato-wrapper{
+    width: 70%;
+    display: flex;
+    box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.9);
+    border-radius: 2rem;
+
+}
+
+.contato-wrapper .contato-left{
+    width: 35%;
+    background-image: url(images/img-wrapper-contact.jfif);
+    background-position: center;
+    background-size: cover;
+}
+
+.contato-wrapper .contato-right{
+    background-color: #eee;
+    padding: 3rem 10rem;
+    width: 65%;
+}
+
+.sessao-contato h1{
+    font-family: var(--Montserrat);
+    text-align: center;
+    color: #272727;
+    font-size: 3.5rem;
+    font-weight: 400;
+    width: 100%;
+}
+
+.sessao-contato form{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.input-group{
+    position: relative;
+}
+
+.input-group textarea{
+    max-width: 25rem;
+    max-height: 5rem;
+}
+
+.sessao-contato form .field{
+    background: transparent;
+    border: none;
+    width: 20rem;
+    font-size: 1.3rem;
+    font-family: var(--Mooli);
+    outline: none;
+    border-bottom: 2.5px #555 dashed;
+    height: 5rem;
+    margin: 1rem 0px;
+}
+
+.sessao-contato form .field-label{
+    position: absolute;
+    font-family: var(--incosolata);
+    text-transform: uppercase;
+    left: 0;
+    top: 2.5rem;
+    font-size: 1.2rem;
+    transition: all 0.3s;
+}
+
+.field:focus ~ label{
+    top: 0;
+    font-size: 1rem;
+}
+
+.field:focus{
+    border-bottom: 1px solid;
+}
+
+.btn-submit{
+    width: 100%;
+    height: 2rem;
 }
