--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ html {
 
 :root {
     --cor-principal: #0088FF;
+    --cor-segundaria: #2d2d2d;
     --incosolata: 'Inconsolata', monospace;
     --Montserrat: 'Montserrat Alternates', sans-serif;
     --Mooli: 'Mooli', sans-serif;
@@ -455,97 +456,17 @@ header {
 
 }
 
-.sessao-contato {
-    width: 100%;
-    height: 100vh;
-    background-color: #272727;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.contato-wrapper {
-    width: 70%;
-    display: flex;
-    box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.9);
-    border-radius: 2rem;
-
-}
-
-.contato-wrapper .contato-left {
-    width: 35%;
-    background-image: url(images/img-wrapper-contact.jfif);
-    background-position: center;
-    background-size: cover;
-}
-
-.contato-wrapper .contato-right {
-    background-color: #eee;
-    padding: 3rem 10rem;
-    width: 65%;
-}
-
-.sessao-contato h1 {
-    font-family: var(--Montserrat);
-    text-align: center;
-    color: #272727;
-    font-size: 3.5rem;
-    font-weight: 400;
-    width: 100%;
-}
-
-.sessao-contato form {
-    width: 100%;
+.sessao-contato{
+    background-color: var(--cor-segundaria);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 20px;
 }
 
-.input-group {
-    position: relative;
-}
 
-.input-group textarea {
-    max-width: 25rem;
-    max-height: 5rem;
-}
 
-.sessao-contato form .field {
-    background: transparent;
-    border: none;
-    width: 20rem;
-    font-size: 1.3rem;
-    font-family: var(--Mooli);
-    outline: none;
-    border-bottom: 2.5px #555 dashed;
-    height: 5rem;
-    margin: 1rem 0px;
-}
-
-.sessao-contato form .field-label {
-    position: absolute;
-    font-family: var(--incosolata);
-    text-transform: uppercase;
-    left: 0;
-    top: 2.5rem;
-    font-size: 1.2rem;
-    transition: all 0.3s;
-}
-
-.field:focus~label {
-    top: 0;
-    font-size: 1rem;
-}
-
-.field:focus {
-    border-bottom: 1px solid;
-}
-
-.btn-submit {
-    width: 100%;
-    height: 2rem;
-}
 
 .sessao-orçamento {
     width: 100%;
@@ -635,7 +556,7 @@ header {
 footer {
     width: 100%;
     height: 10rem;
-    background-color: #2d2d2d;
+    background-color: var(--cor-segundaria);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -711,28 +632,6 @@ footer {
 
     }
 
-    /* .conhecimento-img-wrapper img {
-        display: none;
-    } */
-
-    .sessao-contato {
-        width: 100%;
-        display: flex;
-    }
-
-    .contato-wrapper {
-        width: 100%;
-        display: flex;
-
-    }
-
-
-    .contato-wrapper .contato-right {
-        width: 100%;
-        padding: 5rem 10rem;
-    }
-
-
 
 }
 
@@ -758,36 +657,6 @@ footer {
 
     .conhecimento .conhecimento-header {
         border-top: 1px solid #4b4b4b;
-    }
-
-
-
-    .sessao-contato {
-        width: 100%;
-        display: flex;
-    }
-
-    .contato-wrapper {
-        width: 100%;
-        display: flex;
-
-    }
-
-    .contato-wrapper .contato-left {
-        display: none;
-    }
-
-
-    .contato-wrapper .contato-right {
-        width: 100%;
-        position: relative;
-    }
-
-    .contato-right h1 {
-        position: absolute;
-        top: 0;
-        left: 0;
-        font-size: 2rem;
     }
 
     .sessao-orçamento h1 {
